--- a/app/pages/no17/index.njk
+++ b/app/pages/no17/index.njk
@@ -17,98 +17,100 @@
 {# Main content #}
 {% block content %}
 
-  <main class="no17-page">
-    <section class="section-welcome">
-      <h3 class="ttl-tertiary">ビジネスオーナー様の「うれしい」をご提供！</h3>
+<main class="no17-page">
+  <section class="section-welcome">
+    <h3 class="ttl-tertiary">ビジネスオーナー様の「うれしい」をご提供！</h3>
 
-      <h2 class="ttl-primary">個人事業主様向けサービス</h2>
+    <h2 class="ttl-primary">個人事業主様向けサービス</h2>
 
-      <a href="#" class="btn02">まとめて資料をダウンロードする</a>
-    </section>
+    <a href="#" class="btn02">まとめて資料をダウンロードする</a>
+  </section>
 
-    <section class="section-primary">
-      <h4 class="ttl-quaternary">中小企業の経営者様・経理ご担当者様へ</h4>
+  <section class="section-primary">
+    <h4 class="ttl-quaternary">中小企業の経営者様・経理ご担当者様へ</h4>
 
-      <h2 class="ttl-primary">こんなニーズやお悩みありませんか？</h2>
+    <h2 class="ttl-primary">こんなニーズやお悩みありませんか？</h2>
 
-      <div class="section-primary-wrapper">
-        <div class="containers">
-          <ul class="flex gap30 inherit card-list">
-            <li class="card-type6">
-              <a href="#" class="card">
-                <div class="ttl-quaternary-container">
-                  <h4 class="ttl-quaternary">経費清算に時間がとられている</h4>
-                </div>
+    <div class="section-primary-wrapper">
+      <div class="containers">
+        <ul class="flex gap30 inherit card-list">
+          <li class="card-type6">
+            <a href="#" class="card">
+              <div class="ttl-quaternary-container">
+                <h4 class="ttl-quaternary">経費清算に時間がとられている</h4>
+              </div>
 
-                <div class="circle-container">
-                  イラスト
+              <div class="circle-container">
+                イラスト
+                <br>
+                または
+                <br>
+                アイコン
+              </div>
+
+              <h5 class="ttl-senary">カード利用明細から個人の利用と経費を分けるのが大変。確定申告時も大変だ。</h5>
+
+              <div class="circle-with-arrow">
+                <div class="arrow-down"></div>
+              </div>
+            </a>
+          </li>
+
+          <li class="card-type6">
+            <a href="#" class="card">
+              <div class="ttl-quaternary-container">
+                <h4 class="ttl-quaternary">資金繰りを改善したい</h4>
+              </div>
+
+              <div class="circle-container">
+                イラスト
+                <br>
+                または
+                <br>
+                アイコン
+              </div>
+
+              <h5 class="ttl-senary">借りずに資金繰りを改善したい。期限の迫った請求書の支払いを先延ばししたい。</h5>
+
+              <div class="circle-with-arrow">
+                <div class="arrow-down"></div>
+              </div>
+
+            </a>
+          </li>
+
+          <li class="card-type6">
+            <a href="#" class="card">
+              <div class="ttl-quaternary-container">
+                <h4 class="ttl-quaternary">請求・回収業務に
                   <br>
-                  または
-                  <br>
-                  アイコン
-                </div>
+                  工数がとられている
+                </h4>
+              </div>
 
-                <h5 class="ttl-senary">カード利用明細から個人の利用と経費を分けるのが大変。確定申告時も大変だ。</h5>
+              <div class="circle-container">
+                イラスト
+                <br>
+                または
+                <br>
+                アイコン
+              </div>
 
-                <div class="circle-with-arrow">
-                  <div class="arrow-down"></div>
-                </div>
-              </a>
-            </li>
+              <h5 class="ttl-senary">カード利用明細から個人の利用と経費を分けるのが大変。確定申告時も大変だ。</h5>
 
-            <li class="card-type6">
-              <a href="#" class="card">
-                <div class="ttl-quaternary-container">
-                  <h4 class="ttl-quaternary">資金繰りを改善したい</h4>
-                </div>
+              <div class="circle-with-arrow">
+                <div class="arrow-down"></div>
+              </div>
 
-                <div class="circle-container">
-                  イラスト
-                  <br>
-                  または
-                  <br>
-                  アイコン
-                </div>
-
-                <h5 class="ttl-senary">借りずに資金繰りを改善したい。期限の迫った請求書の支払いを先延ばししたい。</h5>
-
-                <div class="circle-with-arrow">
-                  <div class="arrow-down"></div>
-                </div>
-
-              </a>
-            </li>
-
-            <li class="card-type6">
-              <a href="#" class="card">
-                <div class="ttl-quaternary-container">
-                  <h4 class="ttl-quaternary">請求・回収業務に
-                    <br>
-                    工数がとられている</h4>
-                </div>
-
-                <div class="circle-container">
-                  イラスト
-                  <br>
-                  または
-                  <br>
-                  アイコン
-                </div>
-
-                <h5 class="ttl-senary">カード利用明細から個人の利用と経費を分けるのが大変。確定申告時も大変だ。</h5>
-
-                <div class="circle-with-arrow">
-                  <div class="arrow-down"></div>
-                </div>
-
-              </a>
-            </li>
-          </ul>
-        </div>
+            </a>
+          </li>
+        </ul>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="section-secondary">
+  <section class="section-secondary">
+    <div class="container-1200">
       <div class="notification-primary">
         <div class="notification-panel1">
           <h2 class="card__ttl">課題：確定申告や経費処理が面倒</h2>
@@ -152,7 +154,8 @@
         <div class="notification-panel2">
           <div class="relation">
             <h3 class="single__ttl">
-              <span>個人事業主様・中小企業経営者様におすすめのビジネスカード</span></h3>
+              <span>個人事業主様・中小企業経営者様におすすめのビジネスカード</span>
+            </h3>
 
             <ul class="flex gap30 card-list">
               <li class="card-type8">
@@ -170,7 +173,8 @@
                       <ul class="price-list">
                         <li>
                           <dd>年会費：22,000円（税込）
-                            <br>→初年度年会費無料</dd>
+                            <br>→初年度年会費無料
+                          </dd>
                         </li>
                         <li>
                           <dd>追加カード年会費：3,300円（税込）</dd>
@@ -221,7 +225,8 @@
             </div>
 
             <div class="inquiry__box--txt">
-              <span>「支払い.com」</span>で請求書払いをカードで先のばし。振り込みはお任せ！</div>
+              <span>「支払い.com」</span>で請求書払いをカードで先のばし。振り込みはお任せ！
+            </div>
           </summary>
 
           <div class="notification-panel1-body">
@@ -247,7 +252,8 @@
 
             <div class="inquiry__box--txt">
               <span>セゾンビジネスサポートローン</span>
-              でビジネスのあらゆる事業資金ニーズに対応</div>
+              でビジネスのあらゆる事業資金ニーズに対応
+            </div>
           </summary>
 
           <div class="notification-panel1-body">
@@ -287,13 +293,13 @@
 
                 <div class="container">
                   <div class="flex gap30 card__box-wrapper card__box__wrapper-right">
-                    <div >
+                    <div>
                       <dd>融資枠</dd>
                       <h3 class="ttl-tertiary">最大950万円
                         <small>※1</small>
                       </h3>
                     </div>
-                    <div >
+                    <div>
                       <dd>金利</dd>
                       <h3 class="ttl-tertiary">2.8％～9.6%
                         <small>※1</small>
@@ -302,7 +308,9 @@
                   </div>
                 </div>
 
-                <dd>※1 初回は融資実行となります。ご融資枠の上限は、年収の1/3以内となります。 ※2 ご利用可能枠が110万円以上の方が対象。本サービスご利用前の金利はセゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カードの場合14.5％、セゾンコバルト・ビジネス・アメリカン・エキスプレス®・カードの場合18.0％です。</dd>
+                <dd>※1 初回は融資実行となります。ご融資枠の上限は、年収の1/3以内となります。 ※2
+                  ご利用可能枠が110万円以上の方が対象。本サービスご利用前の金利はセゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カードの場合14.5％、セゾンコバルト・ビジネス・アメリカン・エキスプレス®・カードの場合18.0％です。
+                </dd>
               </li>
             </ul>
           </div>
@@ -310,19 +318,20 @@
           <a href="#" class="btn03">セゾンビジネスサポートローンをもっと詳しく</a>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="section-tertiary">
+  <section class="section-tertiary">
 
-      <h2 class="ttl-secondary">各種サービス資料をまとめてダウンロード</h2>
+    <h2 class="ttl-secondary">各種サービス資料をまとめてダウンロード</h2>
 
-      <h3 class="ttl-tertiary">興味のあるサービス資料をまとめてダウンロードできます。</h3>
+    <h3 class="ttl-tertiary">興味のあるサービス資料をまとめてダウンロードできます。</h3>
 
-      <a href="#" class="btn02">まとめて資料をダウンロードする</a>
-    </section>
+    <a href="#" class="btn02">まとめて資料をダウンロードする</a>
+  </section>
 
-    <section class="section-quaternary">
-
+  <section class="section-quaternary">
+    <div class="container-1200">
       <h2 class="ttl-secondary">お客様の声</h2>
 
       <div class="flex gap30">
@@ -374,13 +383,15 @@
           </h5>
 
           <h6 class="ttl-senary">引越しの初期費用が必要で急いでいたのですが、スピードはもちろん、ファクタリングの10%と比べて安くとても助かりました。
-            <br>条件の良い物件に引っ越せたので大満足です。</h6>
+            <br>条件の良い物件に引っ越せたので大満足です。
+          </h6>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="section-question-and-answer">
-
+  <section class="section-question-and-answer">
+    <div class="container-1200">
       <h2 class="ttl-secondary">お客様の声</h2>
 
       <div class="flex gap20 question-tab open">
@@ -395,8 +406,10 @@
         <div class="qa-button">
           <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewbox="0 0 40 40">
             <g id="Group_3812" data-name="Group 3812" transform="translate(-1355.5 -5395.5)">
-              <line id="Line_379" data-name="Line 379" x2="40" transform="translate(1355.5 5415.5)" fill="none" stroke="#707070" stroke-width="10"/>
-              <line id="Line_380" data-name="Line 380" y1="40" transform="translate(1375.5 5395.5)" fill="none" stroke="#707070" stroke-width="10"/>
+              <line id="Line_379" data-name="Line 379" x2="40" transform="translate(1355.5 5415.5)" fill="none"
+                stroke="#707070" stroke-width="10" />
+              <line id="Line_380" data-name="Line 380" y1="40" transform="translate(1375.5 5395.5)" fill="none"
+                stroke="#707070" stroke-width="10" />
             </g>
           </svg>
         </div>
@@ -414,7 +427,8 @@
         <div class="qa-button">
           <svg xmlns="http://www.w3.org/2000/svg" width="44" height="10" viewbox="0 0 44 10">
             <g id="Group_3811" data-name="Group 3811" transform="translate(-1355.5 -5410.5)">
-              <line id="Line_379" data-name="Line 379" x2="44" transform="translate(1355.5 5415.5)" fill="none" stroke="#2680eb" stroke-width="10"/>
+              <line id="Line_379" data-name="Line 379" x2="44" transform="translate(1355.5 5415.5)" fill="none"
+                stroke="#2680eb" stroke-width="10" />
             </g>
           </svg>
         </div>
@@ -432,8 +446,10 @@
         <div class="qa-button">
           <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewbox="0 0 40 40">
             <g id="Group_3812" data-name="Group 3812" transform="translate(-1355.5 -5395.5)">
-              <line id="Line_379" data-name="Line 379" x2="40" transform="translate(1355.5 5415.5)" fill="none" stroke="#707070" stroke-width="10"/>
-              <line id="Line_380" data-name="Line 380" y1="40" transform="translate(1375.5 5395.5)" fill="none" stroke="#707070" stroke-width="10"/>
+              <line id="Line_379" data-name="Line 379" x2="40" transform="translate(1355.5 5415.5)" fill="none"
+                stroke="#707070" stroke-width="10" />
+              <line id="Line_380" data-name="Line 380" y1="40" transform="translate(1375.5 5395.5)" fill="none"
+                stroke="#707070" stroke-width="10" />
             </g>
           </svg>
         </div>
@@ -451,8 +467,10 @@
         <div class="qa-button">
           <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewbox="0 0 40 40">
             <g id="Group_3812" data-name="Group 3812" transform="translate(-1355.5 -5395.5)">
-              <line id="Line_379" data-name="Line 379" x2="40" transform="translate(1355.5 5415.5)" fill="none" stroke="#707070" stroke-width="10"/>
-              <line id="Line_380" data-name="Line 380" y1="40" transform="translate(1375.5 5395.5)" fill="none" stroke="#707070" stroke-width="10"/>
+              <line id="Line_379" data-name="Line 379" x2="40" transform="translate(1355.5 5415.5)" fill="none"
+                stroke="#707070" stroke-width="10" />
+              <line id="Line_380" data-name="Line 380" y1="40" transform="translate(1375.5 5395.5)" fill="none"
+                stroke="#707070" stroke-width="10" />
             </g>
           </svg>
         </div>
@@ -470,8 +488,10 @@
         <div class="qa-button">
           <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewbox="0 0 40 40">
             <g id="Group_3812" data-name="Group 3812" transform="translate(-1355.5 -5395.5)">
-              <line id="Line_379" data-name="Line 379" x2="40" transform="translate(1355.5 5415.5)" fill="none" stroke="#707070" stroke-width="10"/>
-              <line id="Line_380" data-name="Line 380" y1="40" transform="translate(1375.5 5395.5)" fill="none" stroke="#707070" stroke-width="10"/>
+              <line id="Line_379" data-name="Line 379" x2="40" transform="translate(1355.5 5415.5)" fill="none"
+                stroke="#707070" stroke-width="10" />
+              <line id="Line_380" data-name="Line 380" y1="40" transform="translate(1375.5 5395.5)" fill="none"
+                stroke="#707070" stroke-width="10" />
             </g>
           </svg>
         </div>
@@ -489,23 +509,26 @@
         <div class="qa-button">
           <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewbox="0 0 40 40">
             <g id="Group_3812" data-name="Group 3812" transform="translate(-1355.5 -5395.5)">
-              <line id="Line_379" data-name="Line 379" x2="40" transform="translate(1355.5 5415.5)" fill="none" stroke="#707070" stroke-width="10"/>
-              <line id="Line_380" data-name="Line 380" y1="40" transform="translate(1375.5 5395.5)" fill="none" stroke="#707070" stroke-width="10"/>
+              <line id="Line_379" data-name="Line 379" x2="40" transform="translate(1355.5 5415.5)" fill="none"
+                stroke="#707070" stroke-width="10" />
+              <line id="Line_380" data-name="Line 380" y1="40" transform="translate(1375.5 5395.5)" fill="none"
+                stroke="#707070" stroke-width="10" />
             </g>
           </svg>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="breadcrumb">
-      <ul class="flex">
-        <li>
-          <a href="#">TOP</a>
-        </li>
-        <li>
-          <a href="#">中小企業様向け</a>
-        </li>
-      </ul>
-    </section>
-  </main>
+  <section class="breadcrumb">
+    <ul class="flex">
+      <li>
+        <a href="#">TOP</a>
+      </li>
+      <li>
+        <a href="#">中小企業様向け</a>
+      </li>
+    </ul>
+  </section>
+</main>
 {% endblock %}
