--- a/app/assets/scss/3-modules/_breadcrumb.scss
+++ b/app/assets/scss/3-modules/_breadcrumb.scss
@@ -5,7 +5,10 @@
 */
 
 .breadcrumb {
-  font-size: 12px;
+  max-width: 1200px;
+  margin: auto;
+  font-size: 14px;
+
   @media #{$sp} {
     font-size: 10px;
   }
@@ -13,6 +16,8 @@
     padding: 5px 15px;
   }
   ul {
+    justify-content: flex-start;
+
     li {
       position: relative;
 
