--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -17,16 +17,17 @@
 {# Main content #}
 {% block content %}
 
-  <main class="home-page">
-    <section class="welcome-section">
-
+<main class="home-page">
+  <section class="welcome-section">
+    <div class="container-1200">
       <h3 class="ttl-tertiary">法人・個人事業主のお客様向け</h3>
 
       <h2 class="ttl-primary">クレディセゾンの決済・ビジネスソリューション</h2>
 
       <h4 class="ttl-quaternary">クレディセゾンは、法人・個人事業主の方向けに、カード会社の枠を超えた
         <br>
-        ビジネス成長につながる幅広いソリューションをご提供しています。</h4>
+        ビジネス成長につながる幅広いソリューションをご提供しています。
+      </h4>
       <div class="anc">
         <div class="containers">
           <ul class="flex jcC gap30 inherit anc__box">
@@ -49,10 +50,11 @@
           </ul>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="secondary-section">
-
+  <section class="secondary-section">
+    <div class="container-1200">
       <h2 class="ttl-primary">おすすめサービス</h2>
 
       <div class="anc">
@@ -88,10 +90,11 @@
           </ul>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="tertiary-section">
-
+  <section class="tertiary-section">
+    <div class="container-1200">
       <h2 class="ttl-primary">目的から探す</h2>
 
       <h4 class="ttl-quaternary">お客様のニーズや目的に合わせて様々なソリューションをご提供しています。</h4>
@@ -129,9 +132,11 @@
           </ul>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="quaternary-section">
+  <section class="quaternary-section">
+    <div class="container-1200">
 
       <h2 class="ttl-secondary">さまざまなニーズや課題を解決しています</h2>
 
@@ -218,9 +223,11 @@
       <a href="#" class="btn01">
         <h4 class="ttl-quaternary">導入事例を見る</h4>
       </a>
-    </section>
+    </div>
+  </section>
 
-    <section class="quinary-section">
+  <section class="quinary-section">
+    <div class="container-1200">
       <h3 class="ttl-tertiary">お役立ち資料（無料）ダウンロード</h3>
 
       <h4 class="ttl-quaternary">中小企業の経営者様や個人事業主のよくある課題に対して解決のヒントになる資料を無料でご提供しています。是非ご活用下さい。</h4>
@@ -285,61 +292,15 @@
       <a href="#" class="btn01">
         <h4 class="ttl-quaternary">お役立ち資料一覧を見る</h4>
       </a>
-    </section>
+    </div>
+  </section>
 
-    <section class="senary-section">
-      <h3 class="ttl-tertiary">セミナー・イベント情報</h3>
+  <section class="senary-section">
+    <div class="container-1200"></div>
+  </section>
 
-      <div class="sec-news">
-        <div class="containers">
-          <a href="#" class="sec-news__box">
-            <dl class="flex aiC gap40 sec-news__box--item-primary">
-              <dt class="flex aiC gap20 sp-fS">
-                <time class="time">11/20</time>
-              </dt>
-
-              <h4 class="ttl-quaternary">タイトルが入ります。タイトルが入ります。</h4>
-            </dl>
-
-            <dl class="flex aiC gap50 sec-news__box--item-secondary">
-              <dt class="flex aiC gap30 sp-fS">
-                <span class="cat">ウェビナー</span>
-
-                <h4 class="ttl-quaternary">【開催日時】2022年9月22日 10:00～11:00 【主催】株式会社〇〇〇〇
-                  <br>
-                  【対象】○○○○○のニーズ・課題をお持ちの〇〇</h4>
-              </dt>
-            </dl>
-          </a>
-
-          <a href="#" class="sec-news__box">
-            <dl class="flex aiC gap40 sec-news__box--item-primary">
-              <dt class="flex aiC gap20 sp-fS">
-                <time class="time">11/20</time>
-              </dt>
-
-              <h4 class="ttl-quaternary">タイトルが入ります。タイトルが入ります。</h4>
-            </dl>
-
-            <dl class="flex aiC gap50 sec-news__box--item-secondary">
-              <dt class="flex aiC gap30 sp-fS">
-                <span class="cat">ウェビナー</span>
-
-                <h4 class="ttl-quaternary">【開催日時】2022年9月22日 10:00～11:00 【主催】株式会社〇〇〇〇
-                  <br>
-                  【対象】○○○○○のニーズ・課題をお持ちの〇〇</h4>
-              </dt>
-            </dl>
-          </a>
-        </div>
-      </div>
-
-      <a href="#" class="btn01">
-        <h4 class="ttl-quaternary">セミナー・イベント情報一覧を見る</h4>
-      </a>
-    </section>
-
-    <section class="septenary-section">
+  <section class="septenary-section">
+    <div class="container-1200">
       <h3 class="ttl-tertiary">お知らせ</h3>
 
       <div class="sec-news">
@@ -404,9 +365,11 @@
       <a href="#" class="btn01">
         <h4 class="ttl-quaternary">お知らせ一覧を見る</h4>
       </a>
-    </section>
+    </div>
+  </section>
 
-    <section class="octonary-section">
+  <section class="octonary-section">
+    <div class="container-1200">
       <h3 class="ttl-tertiary">決済・ビジネスソリューションに関するお問合せ</h3>
 
       <div class="useful-wp">
@@ -417,7 +380,8 @@
                 <div class="card__box--ttl">サービス資料ダウンロード</div>
                 <div class="card__box--txt">クレディセゾンのソリューションの詳細が分かる
                   <br>
-                  サービス資料をダウンロードいただけます。</div>
+                  サービス資料をダウンロードいただけます。
+                </div>
                 <div class="more bgY small">サービス資料ダウンロード</div>
               </summary>
             </a>
@@ -426,26 +390,28 @@
                 <div class="card__box--ttl">サービス資料ダウンロード</div>
                 <div class="card__box--txt">クレディセゾンのソリューションの詳細が分かる
                   <br>
-                  サービス資料をダウンロードいただけます。</div>
+                  サービス資料をダウンロードいただけます。
+                </div>
                 <div class="more bgY small">サービス資料ダウンロード</div>
               </summary>
             </a>
           </div>
         </div>
       </div>
-    </section>
-  </main>
+    </div>
+  </section>
+</main>
 
-  <script>
-    $(document).ready(function () {
-      $(".carousel").slick({
-        slidesToShow: 3,
-        slidesToScroll: 1,
-        dots: false,
-        prevArrow: '<button type="button" class="slick-prev">Previous</button>',
-        nextArrow: '<button type="button" class="slick-next">Next</button>',
-      });
+<script>
+  $(document).ready(function () {
+    $(".carousel").slick({
+      slidesToShow: 3,
+      slidesToScroll: 1,
+      dots: false,
+      prevArrow: '<button type="button" class="slick-prev">Previous</button>',
+      nextArrow: '<button type="button" class="slick-next">Next</button>',
     });
-  </script>
+  });
+</script>
 
 {% endblock %}
