adjust section container width

--- a/app/_template/partial/header.njk
+++ b/app/_template/partial/header.njk
@@ -26,7 +26,7 @@
     </div>
   </div>
 
-  {# this for temporarily prevent all.min.js error #}
+  {# this is for temporarily prevent all.min.js errors #}
   <div class="show"></div>
   <div class="hide"></div>
   <div class="floating"></div>
@@ -38,7 +38,7 @@
         </a>
       </div>
 
-      <ul class="container-1200 flex">
+      <ul class="container-1200 gap30 flex">
         <li>
           <a href="#">クレディセゾンの強み中小企業様向け</a>
         </li>
