--- a/app/assets/scss/3-modules/_header.scss
+++ b/app/assets/scss/3-modules/_header.scss
@@ -87,9 +87,9 @@ header {
     }
 
     ul {
-      width: 100%;
       margin: 0 auto;
-      flex-shrink: 0;
+      gap: 20px;
+
       li {
         a {
           padding: 10px 0;
