--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -1048,6 +1048,7 @@
       color: #000000;
       border: 1px solid #747171;
       margin-bottom: 30px;
+      font-weight: bold;
     }
 
     .ttl-senary {
