--- a/app/pages/no15/index.njk
+++ b/app/pages/no15/index.njk
@@ -17,212 +17,153 @@
 {# Main content #}
 {% block content %}
 
-  <main class="no14-page">
-    <section class="section-welcome">
-      <h3 class="ttl-tertiary">法人経営者様・個人事業主様へ。</h3>
+<main class="no14-page">
+  <section class="section-welcome">
+    <h3 class="ttl-tertiary">法人経営者様・個人事業主様へ。</h3>
 
-      <h2 class="ttl-secondary">資金繰り・資金調達をサポートするサービス</h2>
+    <h2 class="ttl-secondary">資金繰り・資金調達をサポートするサービス</h2>
 
-      <h4 class="ttl-quaternary">クレディセゾンは、資金繰り改善や資金調達をもっと手軽に実現できる、<br>
-        サ－ビスをご提供いたします。</h4>
-    </section>
+    <h4 class="ttl-quaternary">クレディセゾンは、資金繰り改善や資金調達をもっと手軽に実現できる、<br>
+      サ－ビスをご提供いたします。</h4>
+  </section>
 
-    <section class="section-primary">
-      <h2 class="ttl-secondary">こんなニーズやお悩みありませんか？</h2>
+  <section class="section-primary">
+    <h2 class="ttl-secondary">こんなニーズやお悩みありませんか？</h2>
 
-      <ul class="flex jcC gap30 card-list">
-        <li class="card-type6">
-          <a href="#" class="card">
-            <div class="ttl-quaternary-container">
-              <h4 class="ttl-quaternary">資金繰りを改善したい</h4>
+    <ul class="flex jcC gap30 card-list">
+      <li class="card-type6">
+        <a href="#" class="card">
+          <div class="ttl-quaternary-container">
+            <h4 class="ttl-quaternary">資金繰りを改善したい</h4>
+          </div>
+
+          <div class="flex gap30 card-body">
+            <div class="circle-container">
+              イラスト
+              <br>
+              または
+              <br>
+              アイコン
             </div>
 
-            <div class="flex gap30 card-body">
-              <div class="circle-container">
-                イラスト
-                <br>
-                または
-                <br>
-                アイコン
+            <ul class="check-list">
+              <li>入金サイトが長く、資金繰りに困っている</li>
+              <li>支払いを先延ばししたい</li>
+              <li>金融機関に知られずに解決したい</li>
+            </ul>
+          </div>
+
+          <div class="circle-with-arrow">
+            <div class="arrow-down"></div>
+          </div>
+        </a>
+      </li>
+
+      <li class="card-type6">
+        <a href="#" class="card">
+          <div class="ttl-quaternary-container">
+            <h4 class="ttl-quaternary">資金調達をしたい</h4>
+          </div>
+
+          <div class="flex gap30 card-body">
+            <div class="circle-container">
+              イラスト
+              <br>
+              または
+              <br>
+              アイコン
+            </div>
+
+            <ul class="check-list">
+              <li>金融機関以外から事業資金を調達したい</li>
+              <li>無担保・無保証人で借りたい</li>
+              <li>できる限り低金利で借りたい</li>
+            </ul>
+          </div>
+
+          <div class="circle-with-arrow">
+            <div class="arrow-down"></div>
+          </div>
+        </a>
+      </li>
+    </ul>
+  </section>
+
+  <section class="section-secondary">
+    <h2 class="ttl-secondary">資金繰り改善や資金調達をもっと手軽に</h2>
+
+    <div class="panel-primary">
+      <div class="cat">資金繰り改善サポート</div>
+
+      <div class="notification-panel2">
+        <div class="relation">
+          <h3 class="single__ttl">
+            <span>経費清算クラウド「Concur Expense」</span>
+          </h3>
+
+          <div class="card-type13">
+            <dd>「支払い.com」を利用すれば、期限の迫った請求書も、支払いまで最長60日余裕をプラス。資金繰りを改善し、借りずに事業を加速できます。
+              必要なのはお手持ちのカードだけ。審査も書類も必要ありません。</dd>
+
+            <div class="flex gap30 aiC sp-reverse">
+              <div class="sec-left-wrapper">
+                <figure class="sec__img"><img src="/assets/img/introduce_page/cash-flow.png" alt=""></figure>
               </div>
 
-              <ul class="check-list">
-                <li>入金サイトが長く、資金繰りに困っている</li>
-                <li>支払いを先延ばししたい</li>
-                <li>金融機関に知られずに解決したい</li>
-              </ul>
-            </div>
+              <div class="gap-10 sec-right-wrapper">
+                <div class="card-type18">
+                  <div class="cat">利用可能ブランド</div>
 
-            <div class="circle-with-arrow">
-              <div class="arrow-down"></div>
-            </div>
-          </a>
-        </li>
+                  <div class="card-body">
+                    <figure class="sec__img"><img src="/assets/img/credit_cards/saison.png" alt=""></figure>
+                    <figure class="sec__img"><img src="/assets/img/credit_cards/master_card.png" alt=""></figure>
+                    <figure class="sec__img"><img src="/assets/img/credit_cards/visa.png" alt=""></figure>
 
-        <li class="card-type6">
-          <a href="#" class="card">
-            <div class="ttl-quaternary-container">
-              <h4 class="ttl-quaternary">資金調達をしたい</h4>
-            </div>
-
-            <div class="flex gap30 card-body">
-              <div class="circle-container">
-                イラスト
-                <br>
-                または
-                <br>
-                アイコン
-              </div>
-
-              <ul class="check-list">
-                <li>金融機関以外から事業資金を調達したい</li>
-                <li>無担保・無保証人で借りたい</li>
-                <li>できる限り低金利で借りたい</li>
-              </ul>
-            </div>
-
-            <div class="circle-with-arrow">
-              <div class="arrow-down"></div>
-            </div>
-          </a>
-        </li>
-      </ul>
-    </section>
-
-    <section class="section-secondary">
-      <h2 class="ttl-secondary">資金繰り改善や資金調達をもっと手軽に</h2>
-
-      <div class="panel-primary">
-        <div class="cat">資金繰り改善サポート</div>
-
-        <div class="notification-panel2">
-          <div class="relation">
-            <h3 class="single__ttl">
-              <span>経費清算クラウド「Concur Expense」</span></h3>
-
-            <div class="card-type13">
-              <dd>経費清算クラウド「Concur Expense」は、法人カード、交通系ICカード（スイカ、パスモなど）、ホテル手配やタクシー配車アプリなど様々なサービスと連携。経費明細が自動で Concur Expense に取り込まれるので、ペーパーレス化はもちろん経費精算を自動化することができます。</dd>
-
-              <div class="flex gap30 aiC sp-reverse">
-                <div class="sec-left-wrapper">
-                  <figure class="sec__img"><img src="/assets/img/introduce_page/concur-expense.png" alt=""></figure>
-                </div>
-
-                <div class="gap-10 sec-right-wrapper">
-                  <dl class="flex aiC gap30 sec01-right-box">
-                    <dt class="flex aiC gap20 sp-fS">
-                      <div class="number-circle">1</div>
-                      <h5 class="ttl-senary">様々な決済手段と連携。<span class="yellow-bottom">経費明細が自動で取り込</span>
-                        み！</h5>
-                    </dt>
-                  </dl>
-
-                  <dl class="flex aiC gap30 sec01-right-box">
-                    <dt class="flex aiC gap20 sp-fS">
-                      <div class="number-circle">2</div>
-                      <h5 class="ttl-senary">
-                        <span class="yellow-bottom">
-                          定期券経路分は自動で控除</span>
-                        ＆
-                        <span class="yellow-bottom">二重申請も自動的にチェック</span></h5>
-                    </dt>
-                  </dl>
-
-                  <dl class="flex aiC gap30 sec01-right-box">
-                    <dt class="flex aiC gap20 sp-fS">
-                      <div class="number-circle">3</div>
-                      <h5 class="ttl-senary">スマホ・モバイ
-                        <span class="yellow-bottom">ルで、いつでも申請・承</span>
-                        認が可能</h5>
-                    </dt>
-                  </dl>
+                    <p>すべてのセゾンカードをご利用いただけます。</p>
+                  </div>
                 </div>
               </div>
-
-              <a href="#" class="btn03 small">「Concur Expense」をもっと詳しく</a>
             </div>
+
+            <a href="#" class="btn03 small">支払い.comをもっと詳しく</a>
           </div>
         </div>
       </div>
     </div>
 
     <div class="panel-secondary">
-      <div class="notification-panel3">
-        <h2 class="card__ttl">未入金対応を0に。さらに毎月の請求業務を最短15分で！</h2>
+      <div class="cat">資金調達サポート</div>
 
-        <summary class="flex gap30 aiC inquiry__box">
-          <div class="inquiry__box--txt">
-            中小企業向け経費精算クラウド
-            <span>「Concur Expense」</span></div>
-        </summary>
+      <div class="notification-panel2">
+        <div class="relation">
+          <h3 class="single__ttl">
+            <span>セゾンビジネスサポートローン（カード会員様限定）</span>
+          </h3>
 
-        <div class="card-type13">
-          <dd>経費清算クラウド「Concur Expense」は、法人カード、交通系ICカード（スイカ、パスモなど）、ホテル手配やタクシー配車アプリなど様々なサービスと連携。経費明細が自動で Concur Expense に取り込まれるので、ペーパーレス化はもちろん経費精算を自動化することができます。</dd>
+          <div class="card-type13">
+            <dd>セゾンビジネスサポートローンは、下記対象のビジネスカードでご利用頂ける中小企業・個人事業主の経営を支援する融資サービスです。お持ちのビジネスカードに、最大950万円のゆとりあるご融資可能枠と借り入れ額に応じた優遇金利をご用意しております。カード1枚で用途を問わず、ビジネスのあらゆるシーンで幅広くご利用いただけます。。</dd>
 
-          <div class="flex gap50 aiC sp-reverse">
-            <div class="sec-left-wrapper">
-              <figure class="sec__img"><img src="/assets/img/introduce_page/concur-expense.png" alt=""></figure>
+            <div class="flex gap30 aiC sp-reverse">
+              <div class="sec-left-wrapper">
+                <figure class="sec__img"><img src="/assets/img/introduce_page/cash-flow.png" alt=""></figure>
+              </div>
 
-              <div class="sec-collection flex gap20">
-                <div class="collection-item">
-                  <div class="collection-item-content">
-                    <div class="collection-item-txt">国内売上シェア
-                      <br>
-                      9年連続No.1*</div>
-                    <img src="/assets/img/common/laurel-wreath.png" class="collection-item-img"/>
+              <div class="gap-10 sec-right-wrapper">
+                <div class="card-type18">
+                  <div class="cat">利用可能ブランド</div>
+
+                  <div class="card-body">
+                    <figure class="sec__img"><img src="/assets/img/credit_cards/saison.png" alt=""></figure>
+                    <figure class="sec__img"><img src="/assets/img/credit_cards/master_card.png" alt=""></figure>
+                    <figure class="sec__img"><img src="/assets/img/credit_cards/visa.png" alt=""></figure>
+
+                    <p>すべてのセゾンカードをご利用いただけます。</p>
                   </div>
-
-                  <h6 class="ttl-senary">*「ITR Market View：予算・経費・サブスクリプション管理市場2023」</h6>
-                </div>
-
-                <div class="collection-item">
-                  <div class="collection-item-content">
-                    <div class="collection-item-txt">顧客満足度
-                      <br>
-                      No.1**
-                    </div>
-                    <img src="/assets/img/common/laurel-wreath.png" class="collection-item-img"/>
-                  </div>
-
-                  <h6 class="ttl-senary">**ITreviewカテゴリーレポート 「経費精算部門/中堅・中小企業」（2023 Winter）</h6>
                 </div>
               </div>
             </div>
 
-            <div class="gap-10 sec-right-wrapper">
-              <dl class="flex aiC gap30 sec01-right-box">
-                <dt class="flex aiC gap20 sp-fS">
-                  <div class="number-circle">1</div>
-                  <h5 class="ttl-senary">
-                    <p>
-                      様々な決済手段と連携<span class="yellow-bottom">。経費明細が自動で取り込</span><br>み！</p>
-                  </h5>
-                </dt>
-              </dl>
-
-              <dl class="flex aiC gap30 sec01-right-box">
-                <dt class="flex aiC gap20 sp-fS">
-                  <div class="number-circle">2</div>
-                  <h5 class="ttl-senary">
-                    <p>定期券経路分は自動で控除＆二重申請も自動的に
-                      <br>
-                      チェック</p>
-                  </h5>
-                </dt>
-              </dl>
-
-              <dl class="flex aiC gap30 sec01-right-box">
-                <dt class="flex aiC gap20 sp-fS">
-                  <div class="number-circle">3</div>
-                  <h5 class="ttl-senary">
-                    <p>
-                      スマホ・モバイ<span class="yellow-bottom">ルで、いつでも申請・承</span>認が可能</p>
-                  </h5>
-                </dt>
-              </dl>
-
-              <a href="#" class="btn03 small">「Concur Expense」をもっと詳しく</a>
-            </div>
+            <a href="#" class="btn03 small">支払い.comをもっと詳しく</a>
           </div>
         </div>
       </div>
@@ -235,11 +176,14 @@
         <summary class="flex gap30 aiC inquiry__box">
           <div class="inquiry__box--txt">
             請求書カード払いサービス
-            <span>「支払い.com」</span></div>
+            <span>「支払い.com」</span>
+          </div>
         </summary>
 
         <div class="card-type13">
-          <dd>請求書カード払いサービスとは、あらゆる銀行振込のお支払いをお持ちのクレジットカードで決済できるサービスです。支払い.comを利用することで、全ての「支払い」を延長することができ、急な支払いで手元資金が足りない場合や資金繰りの改善にも役立ちます。</dd>
+          <dd>
+            請求書カード払いサービスとは、あらゆる銀行振込のお支払いをお持ちのクレジットカードで決済できるサービスです。支払い.comを利用することで、全ての「支払い」を延長することができ、急な支払いで手元資金が足りない場合や資金繰りの改善にも役立ちます。
+          </dd>
 
           <div class="flex gap50 aiC sp-reverse">
             <div class="sec-left-wrapper">
@@ -250,8 +194,9 @@
                   <div class="collection-item-content">
                     <div class="collection-item-txt">国内売上シェア
                       <br>
-                      20,000社を突破*</div>
-                    <img src="/assets/img/common/laurel-wreath.png" class="collection-item-img"/>
+                      20,000社を突破*
+                    </div>
+                    <img src="/assets/img/common/laurel-wreath.png" class="collection-item-img" />
                   </div>
 
                   <h6 class="ttl-senary">*2023年6月現在</h6>
@@ -263,7 +208,7 @@
                       <br>
                       最長60日
                     </div>
-                    <img src="/assets/img/common/laurel-wreath.png" class="collection-item-img"/>
+                    <img src="/assets/img/common/laurel-wreath.png" class="collection-item-img" />
                   </div>
                 </div>
 
@@ -273,7 +218,7 @@
                       <br>
                       振込に対応
                     </div>
-                    <img src="/assets/img/common/laurel-wreath.png" class="collection-item-img"/>
+                    <img src="/assets/img/common/laurel-wreath.png" class="collection-item-img" />
                   </div>
                 </div>
               </div>
@@ -297,7 +242,8 @@
                     <p>
                       <span class="yellow-bottom">書類提出、審査、面談は不</span>
                       <br>
-                      要。</p>
+                      要。
+                    </p>
                   </h5>
                 </dt>
               </dl>
@@ -308,7 +254,8 @@
                   <h5 class="ttl-senary">
                     <p>
                       <span class="yellow-bottom">支払い期限を最大60日延長！</span>借りずに資金繰りを
-                      <br>改善</p>
+                      <br>改善
+                    </p>
                   </h5>
                 </dt>
               </dl>
@@ -327,11 +274,14 @@
         <summary class="flex gap30 aiC inquiry__box">
           <div class="inquiry__box--txt">
             出張手配サービス
-            <span>「CosPro」</span></div>
+            <span>「CosPro」</span>
+          </div>
         </summary>
 
         <div class="card-type13">
-          <dd>CosProとは、法人企業様の出張手配に関わる様々な課題を解決するために生まれた出張手配サービスです。社員様が予約されたチケットの料金が適正かどうかのチェックを行う、弊社独自の「適正化チェック」のサービスで法人企業様の出張コスト削減に寄与いたします。</dd>
+          <dd>
+            CosProとは、法人企業様の出張手配に関わる様々な課題を解決するために生まれた出張手配サービスです。社員様が予約されたチケットの料金が適正かどうかのチェックを行う、弊社独自の「適正化チェック」のサービスで法人企業様の出張コスト削減に寄与いたします。
+          </dd>
 
           <div class="flex gap50 aiC sp-reverse">
             <div class="sec-left-wrapper">
@@ -342,8 +292,9 @@
                   <div class="collection-item-content">
                     <div class="collection-item-txt">初期費用
                       <br>
-                      0円</div>
-                    <img src="/assets/img/common/laurel-wreath.png" class="collection-item-img"/>
+                      0円
+                    </div>
+                    <img src="/assets/img/common/laurel-wreath.png" class="collection-item-img" />
                   </div>
                 </div>
 
@@ -353,7 +304,7 @@
                       <br>
                       0円
                     </div>
-                    <img src="/assets/img/common/laurel-wreath.png" class="collection-item-img"/>
+                    <img src="/assets/img/common/laurel-wreath.png" class="collection-item-img" />
                   </div>
                 </div>
 
@@ -363,7 +314,7 @@
                       <br>
                       0円
                     </div>
-                    <img src="/assets/img/common/laurel-wreath.png" class="collection-item-img"/>
+                    <img src="/assets/img/common/laurel-wreath.png" class="collection-item-img" />
                   </div>
                 </div>
               </div>
@@ -377,7 +328,8 @@
                     <p>
                       <span class="yellow-bottom">書類提出、審査、面談は不</span>
                       <br>
-                      要。</p>
+                      要。
+                    </p>
                   </h5>
                 </dt>
               </dl>
@@ -388,7 +340,8 @@
                   <h5 class="ttl-senary">
                     <p>
                       <span class="yellow-bottom">支払い期限を最大60日延長！</span>借りずに資金繰りを
-                      <br>改善</p>
+                      <br>改善
+                    </p>
                   </h5>
                 </dt>
               </dl>
@@ -409,7 +362,8 @@
                   <div class="number-circle">4</div>
                   <h5 class="ttl-senary">
                     <p>
-                      <span class="yellow-bottom">適正化チェッ</span>で出張コストを抑制！</p>
+                      <span class="yellow-bottom">適正化チェッ</span>で出張コストを抑制！
+                    </p>
 
                     <ul class="sub-list">
                       <li>365日稼働のコールセンターは国内出張の手配専用の窓口です。海外出張の手配窓口に関しては平日のみの稼働となります。</li>
@@ -435,19 +389,23 @@
       <h2 class="ttl-secondary">
         「分かりやすい効果」と「メリット」をご提供します</h2>
 
-      <h3 class="ttl-tertiary fw-normal">業務効率化の取り組み方が分からなかったり、取り組んでもあまり効果が得られなかったりする方も多いのではないでしょうか。クレディセゾンはそういった方向けに「今すぐ始められる」＆「分かりやすい効果とメリット」をご提供いたします。お気軽にご相談下さい。</h3>
+      <h3 class="ttl-tertiary fw-normal">
+        業務効率化の取り組み方が分からなかったり、取り組んでもあまり効果が得られなかったりする方も多いのではないでしょうか。クレディセゾンはそういった方向けに「今すぐ始められる」＆「分かりやすい効果とメリット」をご提供いたします。お気軽にご相談下さい。
+      </h3>
 
       <div class="flex gap60 card-list">
         <div class="card">
           <h3 class="ttl-tertiary">「詳しい資料が欲しい」
-            <br>という方はこちら</h3>
+            <br>という方はこちら
+          </h3>
 
           <a href="#" class="btn02 small show-arrow">サービス資料ダウンロード</a>
         </div>
 
         <div class="card">
           <h3 class="ttl-tertiary">「詳しい話を聞きたい」「相談したい」
-            <br>という方はこちら</h3>
+            <br>という方はこちら
+          </h3>
 
           <a href="#" class="btn02 small show-arrow">サポート担当に無料で相談する</a>
         </div>
