--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -1764,6 +1764,31 @@
   }
 }
 
+// カード型 type18
+.card-type18 {
+  .cat {
+    background-color: #000;
+    padding: 10px 0;
+    font-size: 16px;
+    margin: 0;
+  }
+
+  .card-body {
+    padding: 43px 30px 0 30px;
+    border: 1px solid #707070;
+
+    .sec__img {
+      max-width: 100px;
+      margin: auto;
+      margin-bottom: 30px;
+    }
+
+    p {
+      text-align: left;
+    }
+  }
+}
+
 // Card item01
 .card-item01 {
   margin-bottom: 30px;
