--- a/app/assets/scss/4-pages/_no15.scss
+++ b/app/assets/scss/4-pages/_no15.scss
@@ -112,56 +112,68 @@
 
       .notification-panel2 {
         padding: 0;
+
+        .card-type13 {
+          margin-bottom: 60px;
+
+          .sp-reverse {
+            margin-bottom: 60px;
+
+            .sec-left-wrapper {
+              max-width: 916px;
+
+              .sec__img {
+                max-width: 100%;
+              }
+            }
+
+            .sec-right-wrapper {
+              max-width: 194px;
+
+              .card-type18 {
+                .cat {
+                  background-color: #000;
+                  padding: 10px 0;
+                  font-size: 16px;
+                  margin: 0;
+                }
+              }
+            }
+          }
+        }
       }
     }
 
     .panel-secondary {
       margin-bottom: 60px;
 
-      .notification-panel3 {
+      .notification-panel2 {
+        padding: 0;
+
         .card-type13 {
-          margin-bottom: 30px;
-          padding-bottom: 30px;
+          margin-bottom: 60px;
 
           .sp-reverse {
-            margin-bottom: 0;
+            margin-bottom: 60px;
 
             .sec-left-wrapper {
-              max-width: 391px;
+              max-width: 916px;
 
               .sec__img {
-                margin-bottom: 30px;
-              }
-
-              .sec-collection {
-                justify-content: space-evenly;
-
-                .collection-item {
-                  text-align: left;
-                  width: calc(50% - 15px);
-
-                  .collection-item-content {
-                    text-align: center;
-
-                    img {
-                      max-width: 120px;
-                    }
-                  }
-
-                  .ttl-senary {
-                    font-size: 12px;
-                  }
-                }
+                max-width: 100%;
               }
             }
 
             .sec-right-wrapper {
-              .sec01-right-box {
-              }
+              max-width: 194px;
 
-              .btn03 {
-                margin: 0;
-                margin-top: 30px;
+              .card-type18 {
+                .cat {
+                  background-color: #000;
+                  padding: 10px 0;
+                  font-size: 16px;
+                  margin: 0;
+                }
               }
             }
           }
