--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -1214,6 +1214,7 @@
     color: #fff;
     font-size: 16px;
     margin-bottom: 30px;
+    font-weight: bold;
   }
 
   .card__box--ttl.card__box-ttl02 {
