--- a/app/pages/no17/index.njk
+++ b/app/pages/no17/index.njk
@@ -164,7 +164,8 @@
                 <div class="container">
                   <div class="flex gap20 card__box-wrapper">
                     <div class="credit-card02">
-                      <img src="/assets/img/credit_cards/american-express.png" alt="Your Image" class="credit-card-img">
+                      <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image"
+                        class="credit-card-img">
                     </div>
 
                     <div class="card__box-title">
@@ -268,7 +269,8 @@
                 <div class="container">
                   <div class="flex gap20 card__box-wrapper">
                     <div class="credit-card02">
-                      <img src="/assets/img/credit_cards/american-express.png" alt="Your Image" class="credit-card-img">
+                      <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image"
+                        class="credit-card-img">
                     </div>
 
                     <div class="card__box-title">
@@ -278,7 +280,8 @@
 
                   <div class="flex gap20 card__box-wrapper">
                     <div class="credit-card02">
-                      <img src="/assets/img/credit_cards/american-express.png" alt="Your Image" class="credit-card-img">
+                      <img src="/assets/img/credit_cards/american-express-02.png" alt="Your Image"
+                        class="credit-card-img">
                     </div>
 
                     <div class="card__box-title">
@@ -308,7 +311,7 @@
                   </div>
                 </div>
 
-                <dd>※1 初回は融資実行となります。ご融資枠の上限は、年収の1/3以内となります。 ※2
+                <dd>※1 初回は融資実行となります。ご融資枠の上限は、年収の1/3以内となります。<br> ※2
                   ご利用可能枠が110万円以上の方が対象。本サービスご利用前の金利はセゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カードの場合14.5％、セゾンコバルト・ビジネス・アメリカン・エキスプレス®・カードの場合18.0％です。
                 </dd>
               </li>
