--- a/app/assets/scss/4-pages/_no15.scss
+++ b/app/assets/scss/4-pages/_no15.scss
@@ -1,5 +1,4 @@
 .no14-page {
-  max-width: 1440px;
   margin: auto;
   padding: 140px 0 0px;
 
@@ -116,6 +115,10 @@
         .card-type13 {
           margin-bottom: 60px;
 
+          dd {
+            margin-bottom: 30px;
+          }
+
           .sp-reverse {
             margin-bottom: 60px;
 
@@ -145,7 +148,7 @@
     }
 
     .panel-secondary {
-      margin-bottom: 60px;
+      margin-bottom: 30px;
 
       .notification-panel2 {
         padding: 0;
@@ -153,27 +156,16 @@
         .card-type13 {
           margin-bottom: 60px;
 
-          .sp-reverse {
+          dd {
+            margin-bottom: 30px;
+          }
+
+          .card-list {
             margin-bottom: 60px;
 
-            .sec-left-wrapper {
-              max-width: 916px;
-
-              .sec__img {
-                max-width: 100%;
-              }
-            }
-
-            .sec-right-wrapper {
-              max-width: 194px;
-
-              .card-type18 {
-                .cat {
-                  background-color: #000;
-                  padding: 10px 0;
-                  font-size: 16px;
-                  margin: 0;
-                }
+            .card-type9 {
+              dd {
+                margin-bottom: 0;
               }
             }
           }
@@ -182,98 +174,66 @@
     }
 
     .panel-tertiary {
-      margin-bottom: 60px;
+      margin-bottom: 30px;
 
-      .notification-panel3 {
+      .notification-panel2 {
+        padding: 0;
+
         .card-type13 {
           margin-bottom: 30px;
-          padding-bottom: 30px;
+
+          dd {
+            margin-bottom: 30px;
+          }
 
           .sp-reverse {
-            margin-bottom: 0;
+            margin-bottom: 30px;
 
-            .sec-left-wrapper {
+            .sec__img {
               max-width: 391px;
-
-              .sec__img {
-                margin-top: 80px;
-                margin-bottom: 150px;
-              }
-
-              .sec-collection {
-                justify-content: space-evenly;
-
-                .collection-item {
-                  text-align: left;
-
-                  .collection-item-content {
-                    text-align: center;
-                  }
-
-                  .ttl-senary {
-                    font-size: 12px;
-                  }
-                }
-              }
-            }
-
-            .sec-right-wrapper {
-              .sec01-right-box {
-              }
-
-              .btn03 {
-                margin: 0;
-                margin-top: 30px;
-              }
             }
           }
+        }
+
+        .btn03 {
+          margin-bottom: 30px;
         }
       }
     }
 
-    .panel-quaternary {
-      .notification-panel3 {
+    .panel-quaterary {
+      margin-bottom: 0px;
+
+      .notification-panel2 {
+        padding: 0;
+
         .card-type13 {
           margin-bottom: 30px;
-          padding-bottom: 30px;
+
+          dd {
+            margin-bottom: 30px;
+          }
 
           .sp-reverse {
-            margin-bottom: 0;
+            margin-bottom: 30px;
 
-            .sec-left-wrapper {
+            .sec__img {
               max-width: 391px;
+              flex: 1;
 
-              .sec__img {
-                margin-bottom: 30px;
-              }
-
-              .sec-collection {
-                justify-content: space-evenly;
-
-                .collection-item {
-                  text-align: left;
-
-                  .collection-item-content {
-                    text-align: center;
-                  }
-
-                  .ttl-senary {
-                    font-size: 12px;
-                  }
-                }
-              }
-            }
-
-            .sec-right-wrapper {
-              .sec01-right-box {
-              }
-
-              .btn03 {
-                margin: 0;
-                margin-top: 60px;
+              img {
+                max-width: 167px;
               }
             }
           }
+
+          .sec-right-wrapper {
+            max-width: calc(100% - 391px - 30px);
+          }
+        }
+
+        .btn03 {
+          margin-bottom: 30px;
         }
       }
     }
@@ -314,15 +274,6 @@
           text-align: center;
         }
       }
-    }
-  }
-
-  .breadcrumb {
-    padding: 0 120px;
-    font-size: 14px;
-
-    ul {
-      justify-content: flex-start;
     }
   }
 }
